# safety-vision-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  COLAB_TRAINING.ipynb  COMANDOS_INICIO.md  FASE_1_GUIA.md  GUIA_COLAB.md  INICIO_FASE_1.md  LICENSE  Makefile  README.md  pyproject.toml  train_model.py
app/: __init__.py
notebooks/: 2_yolov8_fine_tuning.ipynb
